--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "moment": "^2.24.0",
+    "nocache": "^2.1.0",
     "node-uuid": "^1.4.8",
     "pg": "^7.14.0",
     "reflect-metadata": "^0.1.13",
